# debian-museum

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/: update-yml
.github/workflows/: 1.3--2.2.yml  10-buster.yml  11-bullseye.yml  12-bookworm.yml  13-trixie.yml  8-jessie.yml  9-stretch.yml  bookworm.yml  bullseye.yml  buster.yml  cross.rs.yml  cross_rs.yml  debain.yml  debian.yml  debootstrap_pkg.yml  dev_vm.yml  get-ctr.rs.yml  old-old-debian.yml  pack-parted.yml  pkg_debootstrap.yml  rs.yml  sid.yml  test-arm64.yml  test-loong64.yml  test.yml  trixie.yml  vm-dev.yml  vm-minimal.yml
assets/: os.ron
assets/build-get-ctr/: Dockerfile  build-and-push
assets/ci/: build.md  get-base-disk.dockerfile  update-arm64-ci.zsh
assets/ci/base/: Dockerfile  disk.json5  disk.toml  disk.v1.ron  disk.v1.toml
assets/ci/circle/: arm64.yml  large.yml
assets/ci/get-ctr/: build-and-push  build.md  get-base-disk.dockerfile  manually-build-rootfs.md
assets/cross/: Dockerfile
assets/debootstrap/: Dockerfile
assets/dev-vm/: Readme.md  run  vm.sshconf
assets/manually-build/: Readme.md
assets/manually-build/scripts/: build-old-debian-rootfs  build-old-ubuntu-rootfs  get-deb-components  install-pkgs-in-container  run-apt-upgrade-in-container
assets/markmap/: sid.md
assets/pack-vm-to-docker/: Dockerfile
assets/parted/: Dockerfile
assets/vm-dev/: Readme.md  connect-to-ssh  vm.sshconf
assets/vm-dev/systemd/: media-sd.automount
assets/vm-minimal/: Readme.md  connect-to-ssh  get-file-from-vm  run  send-file-to-vm
assets/vm-minimal/libexec/: force-sync-time  resize-partition
assets/vm-minimal/scripts/: apt-install
assets/vm-minimal/ssh/: vm.sshconf  vm.sshd.conf
assets/vm-minimal/systemd/: add-cloudflare-dns.service  force-sync-time.service  media-sd.mount  unsafe-resize-disk.service  unsafe-resize-partition.service
crates/archmap/: Cargo.toml
crates/archmap/src/: arch_os.rs  debian_arch.rs  lib.rs  linux_oci_platform.rs  tmm_arch_v0.rs
crates/archmap/tests/: archlinux_arch.rs  deb_arch.rs  oci_platform.rs  tmm_arch.rs
crates/archmap/tests/builder/: mod.rs
crates/build-rootfs/: Cargo.toml
crates/build-rootfs/src/: cfg.rs  main.rs
crates/byteunit/: Cargo.toml
crates/byteunit/src/: error.rs  lib.rs  serialization.rs
crates/get-base-disk/: Cargo.toml
crates/get-base-disk/assets/ci/old_old_debian/: disk.v1.toml
crates/get-base-disk/src/: cfg.rs  cli.rs  command.rs  docker.rs  logger.rs  main.rs  task.rs  url.rs
crates/get-base-disk/src/cfg/: digest.rs
crates/get-base-disk/src/docker/: repo.rs  repo_map.rs
crates/get-base-disk/src/task/: docker.rs  file.rs  mod.rs  old_old_debian.rs  pool.rs
crates/get-base-disk/src/task/old_old_debian/: digest_cfg.rs  docker_task.rs  mod.rs
crates/get-ctr/: Cargo.toml
crates/get-ctr/assets/: .dockerignore
crates/get-ctr/assets/ci/old_old_debian/: Dockerfile
crates/get-ctr/assets/debootstrap/: Dockerfile  debian.ron  debian.toml  ubuntu.ron  ubuntu.toml
crates/get-ctr/assets/old_old_debian/: Dockerfile  disk.v1.ron  disk.v1.toml
crates/get-ctr/src/: cli.rs  command.rs  dir.rs  logger.rs  main.rs  url.rs
crates/get-ctr/src/cfg/: debootstrap.rs  digest.rs  disk.rs  mod.rs
crates/get-ctr/src/cfg/mirror/: debian.rs  debian_archive.rs  debian_debug.rs  debian_elts.rs  debian_ports.rs  debian_security.rs  mod.rs  ubuntu.rs  ubuntu_old.rs  ubuntu_ports.rs
crates/get-ctr/src/docker/: mod.rs  repo.rs  repo_map.rs
crates/get-ctr/src/task/: build_rootfs.rs  compression.rs  docker.rs  mod.rs
crates/get-ctr/src/task/old_old_debian/: digest_cfg.rs  docker_task.rs  mod.rs
crates/hash-digest/: Cargo.toml
crates/hash-digest/src/: blake3.rs  lib.rs  sha256.rs
crates/repack/: Cargo.toml
crates/repack/src/: compression.rs  cpu.rs  format.rs  gz.rs  io_buffer.rs  lib.rs  zstd.rs
src/: build-old-debian-rootfs  build-old-ubuntu-rootfs  create-uuu-old-src-list  pack-rootfs-to-tar  test-apt-update-in-container
