[workspace]
members = [
    # 
    "crates/get-base-disk",
    "crates/repack",
    "crates/archmap", "crates/hash-digest", "crates/byteunit",
]
resolver = "2"
# default-members = ["crates/get-base-disk"]

# [profile.release]
# panic = "unwind"

[profile.thin]
inherits = "release"
panic = "abort"
strip = true
lto = "thin"
# opt-level = "s"
