[workspace]
members = [
    "crates/get-ctr",
    "crates/repack",
    "crates/archmap",
    "crates/hash-digest",
    "crates/byteunit",
]
resolver = "2"
# default-members = ["crates/get-ctr"]

# [profile.release]
# panic = "unwind"

[profile.thin]
inherits = "release"
panic = "abort"
strip = true
lto = "thin"
# opt-level = "s"

[profile.no-lto]
inherits = "thin"
lto = false
