[package]
name = "get-base-disk"
version = "0.0.0-alpha.1"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
derive_more = { version = "0.99.17", default-features = false, features = [
    "deref",
    "from",
] }
getset = "0.1.2"
log = "0.4.20"
ron = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }
url = { version = "2.5.0", features = ["serde"] }

[dependencies.repack]
path = "../repack"

[dependencies.log-l10n]
version = "0.0.0"
default-features = false
features = ["env-logger"]

[dev-dependencies]
toml = "0.8.8"
