[package]
name = "get-ctr"
version = "0.0.0-alpha.9"
edition = "2021"

[dependencies]
ahash = "0.8.7"
anyhow = "1.0.79"
# bincode = { version = "2.0.0-rc.3", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = [
    "deref",
    "from",
    "display",
] }
getset = "0.1.2"
libc = { version = "0.2.153", default-features = false }
log = "0.4.20"
ron = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_with = "3.6.0"
serde_yaml = "0.9.31"
threadpool = "1.8.1"
time = { version = "0.3.34", features = ["serde", "serde-human-readable"] }
tinyvec = { version = "1.6.0", features = ["serde", "alloc"] }
typed-builder = "0.18.1"
url = { version = "2.5.0", features = ["serde"] }

[dependencies.repack]
path = "../repack"
[dependencies.archmap]
path = "../archmap"
[dependencies.hash-digest]
path = "../hash-digest"
[dependencies.byteunit]
path = "../byteunit"

[dependencies.log-l10n]
version = "0.0.0"
default-features = false
features = ["env-logger"]

[dev-dependencies]
serde_json = "1.0.114"
toml = "0.8.8"
